--- a/citationPhrases/citation04/stylingPhrases.css
+++ b/citationPhrases/citation04/stylingPhrases.css
@@ -3,8 +3,8 @@ body{
 	color: gold;
 	margin: 0;
     padding: 0;
-	background:url("images/background.jpg");
-	height: 100%;
+	background:url("images/background.jpg") 100% 100%;
+	background-size: 40% 100%;
 	opacity:.9;
 }
 
@@ -28,10 +28,21 @@ div#grid_container {
 }
 
 div#grid_container > div{
+	position: absolute;
+	width:260px;
+	height:75px;
+	margin:10px;
+	background:none;
+	opacity: 1.;
+}
+
+a.btn8 {
   position: relative;
   display: inline-block;
   margin: 5px;
-  background-color: #493735;
+  color:#fff;
+  text-align:center;
+  font-size:24px;
   cursor: pointer;
   text-decoration: none;
   padding:10px;
@@ -56,9 +67,9 @@ div#grid_container > div{
     inset 0 10px 20px rgba(255,255,255,0.25),
     inset 0 -15px 30px rgba(0,0,0,0.3);
 }
-div#grid_container > div:hover {
--webkit-filter:brightness(1.5);
-background-color: #0b545f;
+
+a.btn8:hover {
+  opacity: 0.7;
 }
 
 a.btn9 {
