--- a/stylingStory.css
+++ b/stylingStory.css
@@ -83,10 +83,10 @@ nav#menu > a:active{ background: #7FBFFF;}
 	padding:10px;
 	margin:25px;
 	display: inline-block;
-    position: relative; 
+   	position: relative; 
 	border: 2px solid #FFDD00;
 	border-radius:8px;
-	width: 250px;
+	width: 450px;
 	opacity:.8;
 }
 
@@ -114,7 +114,7 @@ a.btn9 {
   display: inline-block;
   margin: 40px;
   float: left;
-  color:#3AE2CE;
+  color:#3A32CE;
   font-weight: bolder;
   font-size: 18px;
   text-decoration: none;
