--- a/stylingIndex.css
+++ b/stylingIndex.css
@@ -9,7 +9,7 @@ body{
 
 #logo { 
 background-color:#829EA1;
-color:#FFEA00;  
+color:#FFF;  
 text-align: center; 
 font-family:"Times New Roman", Times;
 text-transform: uppercase;
