--- a/news/styling.css
+++ b/news/styling.css
@@ -115,7 +115,7 @@ a.btn8 {
     inset 0 -15px 30px rgba(0,0,0,0.3); /* Dark Background */
 }
 
-a.button8:hover {
+a.btn8:hover {
   opacity: 0.7;
   filter: alpha(opacity=70);
   -moz-opacity:0.7;
