--- a/words/stylingTopics.css
+++ b/words/stylingTopics.css
@@ -6,7 +6,6 @@ body{
 	background-size: 84% 110%;
 	background-repeat: no-repeat; 
 }
-
 .forCat{width: 70px; position: absolute;}
 .forCat img{width: 100%; height: 100%; opacity: .5;}
 
@@ -67,16 +66,25 @@ nav#menu > a:active{ background: #7FBFFF;}
 .photo a:active {
   top: 1px;
 }
-
+.photo:hover::after {
+	content: attr(data-title); /* Выводим текст */
+    position: absolute; /* Абсолютное позиционирование */
+    left: 10%; top: 10%; /* Положение подсказки */
+    z-index: 1; /* Отображаем подсказку поверх других элементов */
+    background-color: #fff;
+	opacity: .8; 
+	color: #000;
+    font-family: Arial, sans-serif; /* Гарнитура шрифта */
+    font-size: 18px; /* Размер текста подсказки */
+    padding: 6px 6px; /* Поля */
+    border: 2px inset #669999; /* Параметры рамки */
+}
 .opacity{-webkit-filter:opacity(50%);}
 .saturate{-webkit-filter:saturate(3);}
-
 .blur{-webkit-filter:blur(.99px);}
 .sepia{-webkit-filter:sepia(85%);}
-
 .invert{-webkit-filter:invert(80%);}
 .brightness{-webkit-filter:brightness(1.3);}
-
 .contrast{-webkit-filter:contrast(120%);}
 .hue-rotate{-webkit-filter:hue-rotate(180deg);}
 .grayscale{-webkit-filter:grayscale(90%);}
@@ -86,7 +94,6 @@ nav#menu > a:active{ background: #7FBFFF;}
 .playbutton{ opacity:.8; display:block; float:left; width:22px; height:22px; margin:14px 0px 0px 14px; background:url(images/playbtn.jpg) no-repeat; border:none; cursor:pointer; outline:none; }
 .playbutton:hover{ opacity:1; }
 .trackname{ float:left; color:#000; margin:12px 0px 0px 14px; font-size:20px; font-weight:bold; }
-
 a.btn9 {
   position: relative;
   display: inline-block;
