--- a/stylingIndex.css
+++ b/stylingIndex.css
@@ -1,6 +1,6 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	background: url('images/background.jpg');
+	background: url('images/paper.jpg');
 }
 
 .forCat{ width: 60px; position: absolute; cursor: pointer; overflow: hidden; }
